# JournalistTracker

./: add_block_articles.py  add_recent_articles.py  app.py  crypto_news.json  migrations.py  models.py  populate_articles.py  populate_crypto.py  populate_journalists.py  populate_real_data.py  pyproject.toml  refresh_news.py  test_news_api.py  update_crypto_news.py
attached_assets/: Pasted--AI-Powered-Journalist-Tracking-Platform-An-advanced-platform-that-automatically-tracks-journalist-1746130156433.txt
routes/: analytics_routes.py  journalist_routes.py  main_routes.py  news_routes.py  outlet_routes.py  search_routes.py  search_routes.py.new
static/css/: custom.css
static/js/: charts.js  datatables-init.js  main.js  search.js
templates/: base.html  index.html
templates/analytics/: dashboard.html
templates/journalists/: detail.html  list.html
templates/news/: keywords.html  latest.html
templates/outlets/: detail.html  list.html
templates/partials/: footer.html  navbar.html
templates/search/: results.html  search.html
utils/: crypto_data.py  data_collection.py  news_fetcher.py  nlp_utils.py  openai_analyzer.py  web_scraper.py
