[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "openai>=1.76.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "spacy>=3.8.5",
    "trafilatura>=2.0.0",
]
